--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".EditFishPostActivity"/>
+        <activity android:name=".FullOrderDetailsActivity"></activity>
+        <activity android:name=".EditFishPostActivity" />
         <activity android:name=".FullFishDetails" />
         <activity android:name=".AddNewFishActivity" />
         <activity android:name=".SelectNewFishActivity" />
@@ -34,6 +35,7 @@
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
